# rs_scope

./: cluster.ipynb  eda.ipynb  homework.ipynb  hw_classification.ipynb  linear_regression.ipynb  overfitting_regularization.ipynb  rf_classifier.ipynb
ronald13-project/ml_project/: pyproject.toml
ronald13-project/ml_project/ml_project/: data.py  train.py
ronald13-project/ml_project/mlruns/0/: meta.yaml
ronald13-project/ml_project/mlruns/0/013643bfb6ed4ba59599130b2eafb86b/: meta.yaml
ronald13-project/ml_project/mlruns/0/013643bfb6ed4ba59599130b2eafb86b/metrics/: accuracy  f1_macro  roc_auc
ronald13-project/ml_project/mlruns/0/175706bae46f428990b289ed494717d1/: meta.yaml
ronald13-project/ml_project/mlruns/0/28e9bbf016c544c9acb24f680dec98e9/: meta.yaml
ronald13-project/ml_project/mlruns/0/28e9bbf016c544c9acb24f680dec98e9/metrics/: accuracy  (+2 more)
ronald13-project/ml_project/mlruns/0/6642482b88914f3687f81d26ecfb4316/: meta.yaml
ronald13-project/ml_project/mlruns/0/8a9384c270574dc9958dbf4f9a1ef14b/: meta.yaml
ronald13-project/ml_project/mlruns/0/9e18a90dce354795a512351be9a986b4/: meta.yaml
ronald13-project/ml_project/mlruns/0/a89f74ddb5a8476983e89de2e27e3f56/: meta.yaml
ronald13-project/ml_project/mlruns/0/b49a31d34e0b47809a9f6d4d0a9c09e0/: meta.yaml
ronald13-project/ml_project/mlruns/0/f6e3cf36af8b4d7e96c4689905e19739/: meta.yaml
ronald13-project/ml_project/mlruns/0/f855891c9f114beab788962e693117e5/: meta.yaml
ronald13-project/ml_project/mlruns/0/fa15e1bb3ca74f73a9eb8d34aa6b5743/: meta.yaml
ronald13-project/ml_project/tests/: test_ml_project.py
(+14 files in other folders)
