[tool.poetry]
name = "ml_project"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Ihnatsiuk <a.ihnatsiuk@digital-science.com>"]

[tool.poetry.]
python = "^3.dependencies8"
pandas = "^1.4.2"
sklearn = "^0.0"
mlflow = "^1.25.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
